--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -17,16 +17,139 @@
     padding: 15px;
     
     }
+
+    /* #um{
+
+        height:460px;
+        overflow: auto;
+    }         */
     
     
-    
+    #content{
+
+        overflow: auto;   
+
+    }
+
     div#corpoform{
     
      background: none;   
      width: 85%;
-     margin: 30px auto 0px auto;
+     margin: 30px auto 0px auto;  
+     
      
     
+    }
+
+    #familiacab{
+       
+        width:100%;
+        height: 70px;
+        background: none;
+        text-align: center;
+    }
+
+    #q1{
+        width:28%;
+        float:left;
+        background: #E6E6FA;
+        height: 70px;
+        border:solid 1px;
+        border-radius:10px;
+    }
+
+    #q2{
+        width:20%;
+        float:left;
+        margin-left:2%;
+        background: #E6E6FA;
+        height: 70px;
+        border:solid 1px;
+        border-radius:10px;
+    }
+
+    #q3{
+        width:28%;
+        float:left;
+        margin-left:2%;
+        background: #E6E6FA;
+        height: 70px;
+        border:solid 1px;
+        border-radius:10px;
+    }
+
+    #q4{
+        width:18%;
+        float:left;
+        margin-left:2%;
+        height: 70px;
+        background: #E6E6FA;
+        border:solid 1px;
+        border-radius:10px;
+    }
+
+    #fc1{
+
+        width:100%;
+        background: none;
+        float:left;
+    }
+
+    #fc2{
+
+        width:100%;
+        background: none;
+        float:left;
+    }
+
+    #fc3{
+
+        width:100%;
+        background: none;
+        float:left;
+    }
+
+    #fc4{
+
+        width:100%;
+        background: none;
+        float:left;
+    }
+
+    #familia{
+    
+        width:100%;
+        height: 20px;
+        background: none;
+        
+    }
+
+    #f0{
+
+        width:100%;
+        background: none;
+        float:left;
+    }
+
+    #f1{
+
+        width:100%;        
+        background: none;
+        float:left;
+    }
+
+    #f2{
+
+        width:100%;
+        background: none;
+        float:left;
+    }
+
+    #f3{
+
+        width:100%;
+        background: none;
+        float:left;
     }
     
     
@@ -34,7 +157,7 @@
     
     float:left;
     width:45%;
-    height: 130px;
+    height: 440px;
     background: none;
     
     }
@@ -106,6 +229,7 @@
         float:right;
         width:45%;
         background: none;
+        height: 440px;
     }
     
     #botao{
@@ -146,6 +270,11 @@
     #inform{
     
         width:80px;
+    }
+
+    #inform2{
+    
+        width:160px;
     }
     
     #alinhabt{
