--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -31,13 +31,21 @@
 
     }
 
-    div#corpoform{
+    #corpoform{
     
      background: #DCDCDC;   
      width: 85%;
      margin: 30px auto 0px auto;  
      
     }
+
+    #corpoform2{
+    
+        background: #DCDCDC;   
+        width: 85%;
+        margin: 30px auto 0px auto;  
+        
+       }
 
         
     #familiacab{
@@ -156,7 +164,7 @@
     
     float:left;
     width:45%;
-    height: 440px;
+    height: 400px;
     background: none;
     
     }
@@ -166,7 +174,7 @@
         float:left;
         width:45%;
         height: 350px;
-        background: blue;
+        background: none;
         
         }
     
@@ -237,14 +245,14 @@
         float:right;
         width:45%;
         background: none;
-        height: 440px;
+        height: 400px;
     }
 
     #campos2{
     
         float:right;
         width:45%;
-        background: pink;
+        background: none;
         height: 350px;
     }
     
@@ -296,7 +304,7 @@
     #alinhabt{
     
         position: relative;
-        margin-top: 10px;
+        margin-top: 0px;
         vertical-align: bottom;
     
     }
