--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -18,24 +18,22 @@
     
     }
 
-    /* #um{
+    #um{
 
-        height:460px;
+        height:620px;
         overflow: auto;
-    }         */
+    }        
     
     
     #content{
-
         overflow: auto;   
-
     }
 
     #corpoform{
     
      background: #DCDCDC;   
      width: 85%;
-     margin: 30px auto 0px auto;  
+     margin: 20px auto 0px auto;  
      
     }
 
@@ -43,7 +41,7 @@
     
         background: #DCDCDC;   
         width: 85%;
-        margin: 30px auto 0px auto;  
+        margin: 20px auto 0px auto;  
         
        }
 
@@ -62,7 +60,7 @@
         margin-left:0.5%;
         background: #E6E6FA;
         height: 70px;
-        border:solid 1px;
+        /* border:solid 1px; */
         border-radius:10px;
         margin-top:0.4%;
     }
@@ -73,7 +71,7 @@
         margin-left:1.6%;
         background: #E6E6FA;
         height: 70px;
-        border:solid 1px;
+        /* border:solid 1px; */
         border-radius:10px;
         margin-top:0.4%;
     }
@@ -84,7 +82,7 @@
         margin-left:1.6%;
         background: #E6E6FA;
         height: 70px;
-        border:solid 1px;
+        /* border:solid 1px; */
         border-radius:10px;
         margin-top:0.4%;
     }
@@ -95,7 +93,7 @@
         margin-left:1.6%;
         height: 70px;
         background: #E6E6FA;
-        border:solid 1px;
+        /* border:solid 1px; */
         border-radius:10px;
         margin-top:0.4%;
     }
@@ -131,7 +129,7 @@
     #familia{
     
         width:100%;
-        height: 20px;
+        height: 10px;
         background: none;
         
     }
@@ -170,7 +168,7 @@
     float:left;
     width:46%;
     height: 380px;
-    background: none;
+    background: #E6E6FA;
     border:solid 1px;
     border-radius: 10px;
     
@@ -181,7 +179,7 @@
         float:left;
         width:46%;
         height: 320px;
-        background: none;
+        background: #E6E6FA;
         border:solid 1px;
         border-radius: 10px;
         
@@ -255,7 +253,7 @@
     
         float:right;
         width:46%;
-        background: none;
+        background: #E6E6FA;
         height: 380px;
         border:solid 1px;
         border-radius: 10px;
@@ -265,7 +263,7 @@
     
         float:right;
         width:46%;
-        background: none;
+        background: #E6E6FA;
         height: 320px;
         border:solid 1px;
         border-radius: 10px;
@@ -318,9 +316,10 @@
     
     #alinhabt{
     
-        position: relative;
-        margin-top: 0px;
-        vertical-align: bottom;
+       width:100%;
+       height:50px;
+       /* border: solid 1px;
+       border-radius: 10px; */
     
     }
     
@@ -336,9 +335,11 @@
     }
 
     #parentesco{
-        height:425px;
+        height:510px;
         width:98%;
         border:solid 1px;
         border-radius:10px;   
         background: none;
+        margin-top: 0.7%;
+        margin-left: 0.7%;
     }
